<resources>
    <string name="app_name">Studio da Beleza</string>
    <string name="next">Próximo</string>
    <string name="District">Bairro</string>
    <string name="street">Rua</string>
    <string name="number">Nº</string>
    <string name="city">Cidade</string>
    <string name="code_postal">CEP</string>
    <string name="name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="state">UF</string>
    <string name="complement">Complemento</string>
    <string name="info_recuperacao">Insira seu e-mail de cadastro para receber as instruções de recuperação de senha.</string>
    <string name="forgot_your_password">Esqueceu sua senha?</string>
    <string name="e_mail">E-mail</string>
    <string name="button_forgot_password">Recuperar senha</string>
    <string name="lastname">Sobrenome</string>
    <string name="password_">Senha</string>
    <string name="btn_register">Cadastrar</string>


</resources>